# pinbuilder

./: .gitignore  flake.nix  pyproject.toml
pinbuilder/: cli.py  game.py
pinbuilder/math/: bezier.py  bezier_path.py  path.py  vectors.py
pinbuilder/objects/: ramp.py
pinbuilder/svg/: parser.py
pinbuilder/svg/features/: __init__.py  base.py  flipper_base.py  flipper_tip.py  general_illumination.py  playfield_cutout.py  playfield_dimensions.py  pop_bumper.py  post.py  ramp_height.py  ramp_path.py  ramp_width.py  saucer.py  target.py  unknown.py
